--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PE'
 - !lcsh 'Readers'
+- GITenberg
 title: McGuffey's Fifth Eclectic Reader
 url: http://www.gutenberg.org/ebooks/15040
